# code-research

./: .gitignore  JIRA_API_DOCUMENTATION.md  github-repository-analysis-report.md  jira-api-schema.ts  jira-github-integration-research.md  jira-quick-reference.md
agent-sandbox-local/: .gitignore  README.md  SKILL.md
agent-sandbox-local/config/: config.yaml
agent-sandbox-local/docker/: Dockerfile.base  Dockerfile.full  Dockerfile.node  Dockerfile.python  build.sh
agent-sandbox-local/prompts/: host.md  plan-build-host-test.md  plan-full-stack.md  sandbox.md  test.md
agent-sandbox-local/sandbox_cli/: pyproject.toml
agent-sandbox-local/sandbox_cli/src/: __init__.py  main.py
agent-sandbox-local/sandbox_cli/src/backends/: __init__.py  base.py  factory.py
agent-sandbox-local/sandbox_cli/src/backends/orbstack/: __init__.py  backend.py
agent-sandbox-local/sandbox_cli/src/backends/tmux/: __init__.py  backend.py
agent-sandbox-local/sandbox_cli/src/commands/: __init__.py  backend.py  exec.py  files.py  sandbox.py
agent-sandbox-local/sandbox_cli/src/config/: __init__.py  loader.py  settings.py
agent-sandbox-local/sandbox_cli/src/modules/: __init__.py  commands.py  files.py  sandbox.py
agent-sandbox-local/sandbox_cli/src/utils/: __init__.py  exceptions.py  logging.py
agent-sandbox-local/tests/: __init__.py  conftest.py  test_hello_world.py  test_orbstack.py  test_tmux.py
ai-assisted-workflows/tools/enaible-rs/: Cargo.toml  README.md  compare_cli.sh
ai-assisted-workflows/tools/enaible-rs/crates/enaible-analyzers/: Cargo.toml
ai-assisted-workflows/tools/enaible-rs/crates/enaible-analyzers/src/: base.rs  lib.rs  registry.rs
ai-assisted-workflows/tools/enaible-rs/crates/enaible-cli/: Cargo.toml
ai-assisted-workflows/tools/enaible-rs/crates/enaible-cli/src/: main.rs
ai-assisted-workflows/tools/enaible-rs/crates/enaible-cli/src/commands/: analyzers.rs  install.rs  mod.rs  prompts.rs  root.rs
ai-assisted-workflows/tools/enaible-rs/crates/enaible-core/: Cargo.toml
ai-assisted-workflows/tools/enaible-rs/crates/enaible-core/src/: constants.rs  context.rs  lib.rs
ai-assisted-workflows/tools/enaible-rs/crates/enaible-prompts/: Cargo.toml
ai-assisted-workflows/tools/enaible-rs/crates/enaible-prompts/src/: adapters.rs  catalog.rs  lib.rs  lint.rs  renderer.rs  utils.rs
ai-assisted-workflows/tools/enaible-rs/tests/integration/: cli_compatibility.rs
codebase-search-cli/: .env.example  .gitignore  README.md  pyproject.toml
codebase-search-cli/src/codebase_search_cli/: __init__.py  config.py  gemini_client.py  main.py
codebase-search-cli/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_gemini_client.py  test_integration.py
copilot-context-tracker/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.txt  QUALITY_GATES_REPORT.md  QUICK_START.md  README.md  UNIT_TEST_REPORT.md  jest.config.js  package-lock.json  package.json  tsconfig.json
copilot-context-tracker/src/: extension.ts
copilot-context-tracker/src/models/: ModelInfo.ts  TokenUsage.ts  index.ts
copilot-context-tracker/src/services/: LanguageModelService.ts  ModelDiscoveryService.ts  TokenTrackingService.ts  index.ts
copilot-context-tracker/src/ui/: DetailedViewProvider.ts  StatusBarManager.ts  index.ts
docs/: README.md  copilot-chat-modes-and-agents.md  copilot-custom-agents-subagents.md  design-implementation-reviewer.md  figma-mcp-plugin.md  figma-workflow-system.md  setup-browser-tools.md
docs/agents/: design-reviewer.agent.md  figma-consistency-checker.agent.md  figma-design-implementer.agent.md  figma-partial-extractor.agent.md
dora-metrics/: .env.example  README.md  RESEARCH.md  package.json
dora-metrics/public/: index.html
dora-metrics/src/: App.tsx  index.ts  main.tsx  server.ts
enaible-ts/: package-lock.json  package.json
enaible-ts/src/: cli.ts  constants.ts  index.ts
enaible-ts/tests/: install.test.ts  prompts.test.ts
feature-lifecycle-dashboard/dashboard/: eslint.config.mjs  package-lock.json  package.json  prettier.config.js  vitest.config.ts  vitest.integration.config.ts
lifecycle-dashboard/: package.json
oracle/: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  jest.config.js  package.json  tsconfig.test.json
oracle/coverage/: formatter.ts.html  index.html  index.ts.html  lcov.info  orchestrator.ts.html  voice.ts.html
oracle/examples/: advanced-orchestration.ts  basic-usage.ts  voice-demo.ts
oracle/src/: cli.ts  formatter.ts  index.ts  orchestrator.ts  provider.ts  types.ts  voice.ts
oracle/test-output/: 2025-11-08_test-query-with-special-characters.md  2025-11-08_test-query.html  2025-11-08_test-query.json  2025-11-10_test-query-with-special-characters.md  2025-11-10_test-query.html  2025-11-10_test-query.json
prompt-optimizer/: .coverage  README.md  pyproject.toml  requirements.txt
prompt-optimizer/examples/: basic_usage.py  compare_optimizers.py
prompt-optimizer/prompt_optimizer/: __init__.py  evaluator.py  models.py  optimizer.py
prompt-optimizer/prompt_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompt-optimizer/tests/: __init__.py  conftest.py
prompt-optimizer/tests/integration/: __init__.py  test_qa_extraction.py  test_sentiment_classification.py
prompt-optimizer/tests/unit/: __init__.py  test_evaluator.py  test_models.py  test_optimizer.py
rule-verifier/: .gitignore  README.md  config.yaml  requirements.txt  run_verifier.py
rule-verifier/examples/: example_AGENTS.md  example_CLAUDE.md
rule-verifier/src/: __init__.py  parser.py  reporter.py  rule_extractor.py  scenario_generator.py  session_manager.py  test_runner.py  validator.py
rule-verifier/tests/: README.md  test_integration.py
smoke-test-oracle/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
smoke-test-oracle/examples/: basic-test-example.ts
smoke-test-oracle/src/: cli.ts  index.ts
wordpress-vip-categorization/: .pre-commit-config.yaml  AGENTS.md  README.md
(+145 files in other folders)
