[workspace]
members = [
    "crates/enaible-core",
    "crates/enaible-prompts",
    "crates/enaible-analyzers",
    "crates/enaible-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enaible Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
tera = "1.19"
minijinja = { version = "2.0", features = ["loader"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"

# Internal workspace dependencies
enaible-core = { path = "crates/enaible-core" }
enaible-prompts = { path = "crates/enaible-prompts" }
enaible-analyzers = { path = "crates/enaible-analyzers" }

# Test dependencies
tempfile = "3.8"
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json", "yaml"] }