[package]
name = "enaible-analyzers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
enaible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }