[package]
name = "enaible-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
home = "0.5"

[dev-dependencies]
tempfile = { workspace = true }